<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="@dimen/dialog_width"
	android:layout_height="wrap_content">
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="5dp"
		android:paddingRight="5dp">

		<include layout="@layout/edit_cylinder_name" />
	
		<TextView
			android:id="@+id/serial_prompt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/serial_prompt"
			android:layout_below="@+id/name"
			android:layout_marginTop="7dp"
			android:layout_marginBottom="10dp"
			android:textSize="@dimen/label_size" />
		<EditText
			android:id="@+id/serial"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@id/serial_prompt"
			android:layout_toRightOf="@id/serial_prompt" />
	
		<include layout="@layout/cylinder_edit_hydro_viz"
				android:id="@+id/hydroViz"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/serial_prompt" />
		<LinearLayout
				android:id="@+id/subEdits"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/hydroViz"
				android:orientation="horizontal">
			<Button
					android:id="@+id/capacityPressure"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/capacity_pressure" />
			<Button
					android:id="@+id/testIntervals"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/test_intervals" />
		</LinearLayout>

		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/subEdits"
				android:orientation="horizontal">

			<include layout="@layout/edit_buttons" />

		</LinearLayout>
	</RelativeLayout>
</ScrollView>